# duration-timer

./: CMakeLists.txt
example/: timer_example.cpp
include/: duration_timer.h
src/: duration_timer.cpp
